Make Details username should link to profile page

--- a/views/details.html
+++ b/views/details.html
@@ -53,7 +53,7 @@
                 <img class="make-user-gravatar" src="https://secure.gravatar.com/avatar/{{ emailHash }}?s=40d=https%3A%2F%2Fstuff.webmaker.org%2Favatars%2Fwebmaker-avatar-44x44.png" alt="{{ username}}">
                 <span class="made-by">
                   {{ gettext("Made by") }}
-                  <a target="_blank" class="make-username" href="/u/{{ username }}">@{{ username }}</a>
+                  <a target="_blank" class="make-username" href="/user/{{ username }}">@{{ username }}</a>
                   <span class="make-relative-date">{{ createdAt }}</span>
                   <span data-make-id="{{ id }}"
                         title="Report Inappropriate Make"
